[tool.poetry]
name = "myadminkadaemon"
version = "0.0.1"
description = "MyAdminKA server application"
authors = ["Vordy <61288579+VordyV@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.115.11"
peewee = "^3.17.9"
pydantic = {extras = ["email"], version = "^2.10.6"}
authx = "^1.4.2"
uvicorn = "^0.34.0"
bcrypt = "^4.3.0"
fastapi-events = "^0.12.2"
apscheduler = "^3.11.0"
python-slugify = "^8.0.4"
shortuuid = "^1.0.13"
pymysql = "^1.1.1"
rconnet = "^0.1.1"
sqlalchemy = "^2.0.39"
peewee-async = {extras = ["mysql"], version = "^1.1.0"}
fastapi-limiter = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
